--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <title>Time</title>
  </head>
  <body>
-  <h1>Current time: </h1>
+  <h1>Hello! Current time: </h1>
   
    <script type="text/javascript">
        document.write(Date());
